# plasma6-applet-appgrid

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
.github/workflows/: build.yml  publish.yml  release.yml
package-panel/contents/ui/: ConfigGeneral.qml  main.qml
package/contents/ui/: AppContextMenu.qml  AppGridView.qml  AppIconDelegate.qml  CategoryBar.qml  ConfigGeneral.qml  DragSource.qml  EdgeAutoScroller.qml  FavoritesManager.qml  FavoritesReorderArea.qml  GridPanel.qml  GridWindow.qml  RecentAppsHeader.qml  SearchResultsList.qml  main.qml
package/contents/ui/prefix/: PrefixFileBrowser.qml  PrefixHiddenView.qml  PrefixInfoView.qml
package/contents/ui/views/: GridPanel.qml  GridWindow.qml  PrefixModeView.qml
package/contents/ui/widgets/: AppIconDelegate.qml  SearchBar.qml
package/variants/center/: main.qml
package/variants/panel/: main.qml
src/: appfiltermodel.cpp  appfiltermodel.h  appgridplugin.h  appmodel.h  categorymapping.h  unifiedsearchmodel.h  updatechecker.h
tests/: CMakeLists.txt  test_appfiltermodel.cpp
tests/qml/: main.cpp  tst_FavoritesMigration.qml  tst_MnemonicResolver.qml  tst_PrefixDetector.qml  tst_SelectionState.qml
